fix: megamenu spacing

--- a/scss/megamenu/_menu.scss
+++ b/scss/megamenu/_menu.scss
@@ -8,6 +8,8 @@
 
 .megamenu-sidebar h2 {
   font-weight: 100;
+  margin-bottom: 3rem;
+  text-align: right;
 }
 
 .megamenu-sidebar ul {
